[gd_scene load_steps=2 format=3 uid="uid://bwsrt5h8xryks"]

[ext_resource type="Script" path="res://scripts/gui/pause_menu.gd" id="1_cn722"]

[node name="PauseMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.466667)
script = ExtResource("1_cn722")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -63.5
offset_right = 150.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 51
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayAgainButton" type="Button" parent="Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again
"

[node name="BackToMenuButton" type="Button" parent="Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back To menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Container/VBoxContainer/PlayAgainButton" to="." method="_play_again"]
[connection signal="pressed" from="Container/VBoxContainer/BackToMenuButton" to="." method="_back_to_menu"]
